instaled and redirected  tomcat7 and dspace